--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,2 +1,5 @@
 <home-bar app="{{app}}"></home-bar>
 <poster items="{{poster}}" app="{{app}}"></poster>
+<home-actions items="{{actions}}" app="{{app}}"></home-actions>
+<gift items="{{gift}}" app="{{app}}" bind:submit="onSubmit"></gift>
+<teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
