--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -3,3 +3,5 @@
 <home-actions items="{{actions}}" app="{{app}}"></home-actions>
 <gift items="{{gift}}" app="{{app}}" bind:submit="onSubmit"></gift>
 <teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
+
+<home-booked items="{{booked}}" app="{{app}}" bind:submit="onHomeBookedSubmit"></home-booked>
