--- a/miniprogram/components/teacher/teacher.wxss
+++ b/miniprogram/components/teacher/teacher.wxss
@@ -65,6 +65,7 @@
     align-items: stretch;
     overflow-x: scroll;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .teachers::-webkit-scrollbar {
