--- a/miniprogram/components/home-notice/home-notice.wxml
+++ b/miniprogram/components/home-notice/home-notice.wxml
@@ -1,5 +1,5 @@
 <view class="title">公告</view>
- <view style="background-color: #fff;padding-bottom:32rpx;" bindtap="onClick">
+ <view style="background-color: #fff;padding:26rpx 0 32rpx;" bindtap="onClick">
 <view class="item">
     <view class="item-title">世界</view>
     <view class="item-subtitle">世界</view>
