--- a/miniprogram/components/home-actions/home-actions.wxss
+++ b/miniprogram/components/home-actions/home-actions.wxss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 20rpx 0 46rpx;
+    row-gap: 16rpx;
 }
 
 .image {
@@ -21,4 +22,18 @@
 
 .text {
     font-size: 24rpx;
+}
+
+.button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    background-color: transparent;
+    margin: 0;
+    line-height: normal;
+}
+
+.button::after {
+    display: none;
 }
