--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <home-bar app="{{app}}"></home-bar>
 <poster items="{{poster}}" app="{{app}}"></poster>
-<home-actions items="{{actions}}" app="{{app}}"></home-actions>
+<home-actions items="{{actions}}" app="{{app}}" bind:submit="onHomeActionsSubmit"></home-actions>
 <gift slogan="{{market.slogan}}" app="{{app}}" bind:submit="onSubmit"></gift>
 <teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
 
