--- a/app/frontend/index.css
+++ b/app/frontend/index.css
@@ -15,9 +15,46 @@ body {
     height: 100%;
     right: auto;
     width: auto;
-}.heading{
-            margin: 0;padding-top: 2px;font-family: 
-            }.heading{
-            margin: 0;padding-top: 2px;font-family: Roboto,Arial,sans-serif;font-weight:
-        400;letter-spacing: 0;line-height: 2rem;font-size: 22px;
-            }
+}
+
+.heading {
+    margin: 0;
+    padding-top: 2px;
+    font-family:
+}
+
+.heading {
+    margin: 0;
+    padding-top: 2px;
+    font-family: Roboto, Arial, sans-serif;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 2rem;
+    font-size: 22px;
+}
+
+.heading-right {
+
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    height: 32px;
+
+}
+
+.heading-top {
+
+    display: flex;
+    width: 100%;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+
+}
+
+.heading-wrapper {
+
+    border-bottom: 1px solid #dadce0;
+    margin: -12px -16px 0;
+    padding: 8px 16px;
+
+}
