--- a/miniprogram/pages/user/user.wxml
+++ b/miniprogram/pages/user/user.wxml
@@ -1,2 +1,3 @@
-<user-profile item="{{user}}" app="{{app}}" bind:submit="onUserProfileSubmit"></user-profile>
-<login wx:if="{{showLogin}}" items="{{login}}" app="{{app}}" bind:submit="onLoginSubmit"></login>
+<user-profile user="{{user}}" backgroundColor="{{backgroundColor}}" app="{{app}}" bind:submit="onUserProfileSubmit"></user-profile>
+<login wx:if="{{showLogin}}" app="{{app}}" bind:success="onLoginSubmit"></login>
+<user-actions items="{{user-actions}}" app="{{app}}" bind:submit="onUserActionsSubmit"></user-actions>
