--- a/miniprogram/pages/booking/booking.wxml
+++ b/miniprogram/pages/booking/booking.wxml
@@ -1,9 +1,17 @@
  <booking-bar app="{{app}}" bind:submit="onBookingBarSubmit"></booking-bar>
  <daily-schedule app="{{app}}" offset="{{offset}}" bind:submit="onDailyScheduleSubmit"></daily-schedule>
   <view style="height:16rpx;background:#f2f2f2">  </view>
- <view class="empty-container">
+ <view wx:if="{{holiday}}" class="empty-container">
    <view>
      <image class="empty-picture" src="../../images/smile.svg"></image>
      <view class="empty-text">假日注意休息</view>
    </view>
  </view>
+<view wx:elif="{{loading}}" style="display:flex;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
+<spinner></spinner>
+<view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
+</view>
+
+<view style="padding:32rpx">
+<booking-item wx:for="{{lessons}}" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
+</view>
