--- a/miniprogram/components/teacher-buttons/teacher-buttons.wxml
+++ b/miniprogram/components/teacher-buttons/teacher-buttons.wxml
@@ -1,13 +1,13 @@
 <view class="title">近 7 日课程</view>
 <view style="background-color: #fff;padding:26rpx 0 32rpx;display:flex;align-items: center;justify-content: center;flex-direction:column;" >
 <view class="wrapper">
-  <view class="item" data-id="1" bindtap="onClick">
+  <view class="item {{selected===1?'selected':''}}" data-id="1" bindtap="onClick">
     团课
   </view>
-  <view class="item" data-id="2" bindtap="onClick">
+  <view class="item {{selected===2?'selected':''}}" data-id="2" bindtap="onClick">
     私教
   </view>
-  <view class="item" data-id="3"   bindtap="onClick">
+  <view class="item {{selected===3?'selected':''}}" data-id="3"   bindtap="onClick">
     小班
   </view>
 </view>
