--- a/miniprogram/pages/teacher/teacher.wxml
+++ b/miniprogram/pages/teacher/teacher.wxml
@@ -11,7 +11,7 @@
 <view wx:if="{{holiday}}" style="padding:120rpx 32rpx;font-size:28rpx;background:#fff;display:flex;align-items: center;justify-content: center">
     <view>暂未安排课程</view>
 </view>
-<view wx:elif="{{loading}}" style="display:flex;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
+<view wx:elif="{{loading}}" style="display:none;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
   <spinner></spinner>
   <view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
 </view>
