--- a/miniprogram/pages/teacher/teacher.wxml
+++ b/miniprogram/pages/teacher/teacher.wxml
@@ -1,7 +1,7 @@
 <view class="wrapper" style="background-color:{{background}}">
   <image class="avatar" src="{{app.globalData.staticHost}}/images/{{teacher.thumbnail}}" mode="aspectFit"></image>
   <view class="teacher-info">
-    <view>
+    <view style="display:flex;align-items: center;justify-content: center;flex-direction:column;">
       <view class="title">{{teacher.name}}</view>
       <view class="subtitle">{{teacher.introduction}}</view>
     </view>
