--- a/miniprogram/pages/booking/booking.wxml
+++ b/miniprogram/pages/booking/booking.wxml
@@ -15,3 +15,4 @@
 <view style="padding:20rpx">
 <booking-item wx:for="{{lessons}}" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
 </view>
+<login wx:if="{{showLogin}}" app="{{app}}" bind:success="onLoginSubmit"></login>
