--- a/miniprogram/pages/teacher/teacher.wxml
+++ b/miniprogram/pages/teacher/teacher.wxml
@@ -9,14 +9,14 @@
 </view>
 <teacher-buttons app="{{app}}" bind:submit="onTeacherButtonsSubmit"></teacher-buttons>
 <view wx:if="{{holiday}}" style="padding:120rpx 32rpx;font-size:28rpx;background:#fff;display:flex;align-items: center;justify-content: center">
-    <view>暂未安排课程</view>
+  <view>暂未安排课程</view>
 </view>
 <view wx:elif="{{loading}}" style="display:none;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
   <spinner></spinner>
   <view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
 </view>
-<view style="padding:20rpx;"  wx:if="{{lessons}}">
-  <booking-item wx:for="{{lessons}}" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
+<view style="padding:20rpx;" wx:if="{{lessons}}">
+  <booking-item wx:for="{{lessons}}" wx:key="*this" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
 </view>
 <view class="more" style="display:none">
   <view>更多介绍</view>
