--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -7,3 +7,6 @@
 <home-booked items="{{booked}}" app="{{app}}" bind:submit="onHomeBookedSubmit"></home-booked>
 <home-notice items="{{notices}}" app="{{app}}" bind:submit="onHomeNoticeSubmit"></home-notice>
 <copyright items="{{copyright}}" app="{{app}}" bind:submit="onCopyrightSubmit"></copyright>
+
+<view style="height: 96rpx">
+</view>
