--- a/miniprogram/pages/one/one.wxml
+++ b/miniprogram/pages/one/one.wxml
@@ -16,3 +16,5 @@
 <booking-item wx:for="{{lessons}}" wx:key="*this" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
 </view>
 <login wx:if="{{showLogin}}" app="{{app}}" bind:success="onLoginSubmit"></login>
+
+<tabbar app="{{app}}"items="{{items}}" selected="{{selected}}"></tabbar>
