--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -3,10 +3,8 @@
 <home-actions items="{{actions}}" app="{{app}}" bind:submit="onHomeActionsSubmit"></home-actions>
 <gift slogan="{{market.slogan}}" app="{{app}}" bind:submit="onSubmit"></gift>
 <teacher items="{{teachers}}" app="{{app}}" bind:submit="onTeacherSubmit"></teacher>
-
 <home-booked items="{{booked}}" app="{{app}}" bind:submit="onHomeBookedSubmit"></home-booked>
 <home-notice items="{{notices}}" app="{{app}}" bind:submit="onHomeNoticeSubmit"></home-notice>
 <copyright items="{{copyright}}" app="{{app}}" bind:submit="onCopyrightSubmit"></copyright>
-
-<view style="height: 96rpx">
-</view>
+<!-- 预留底部栏的空间 -->
+<view style="height: 96rpx"></view>
