--- a/app/backend/css/notices.css
+++ b/app/backend/css/notices.css
@@ -37,7 +37,7 @@ body {
     font-size: .6875rem;
     font-weight: 500;
     text-transform: uppercase;
-    color: #5f6368;
+    color: #202124;
     line-height: .6875rem;
     margin-right: 8px;
     white-space: nowrap;
