--- a/app/backend/css/notice.css
+++ b/app/backend/css/notice.css
@@ -1,20 +1,24 @@
 html {
-    font-family: Roboto, Helvetica Neue, Arial, sans-serif;
+  font-family: Roboto, Helvetica Neue, Arial, sans-serif;
 }
 
 body {
-    font-size: small;
-    margin: 0;
-    background: #fff;
-    color: #4d5156;
-    background-color: #fff;
-    overflow: initial;
-    font-family: 'pingfang SC', 'helvetica neue', arial, 'hiragino sans gb', 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif;
+  font-size: small;
+  margin: 0;
+  background: #fff;
+  color: #4d5156;
+  background-color: #fff;
+  overflow: initial;
+  font-family: 'pingfang SC', 'helvetica neue', arial, 'hiragino sans gb', 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif;
 }
 
-.wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+:focus {
+  outline: none
+}
+
+textarea {
+  padding: 16px;
+  width: 100%;
+  height: 30vh;
+  border: none;
 }
