--- a/app/backend/css/image.css
+++ b/app/backend/css/image.css
@@ -61,3 +61,13 @@ img {
     height: 120px;
 
 }
+    .line1{
+    display:flex;align-items: center;justify-content: center;
+                font-size: 24px;
+                
+    }
+    .line2{
+    display:flex;align-items: center;justify-content: center;
+                font-size: 22px;
+                
+    }
