--- a/miniprogram/pages/booking/booking.wxml
+++ b/miniprogram/pages/booking/booking.wxml
@@ -1,18 +1,34 @@
- <booking-bar app="{{app}}" bind:submit="onBookingBarSubmit"></booking-bar>
- <daily-schedule app="{{app}}" offset="{{offset}}" bind:submit="onDailyScheduleSubmit" style="background:#fff"></daily-schedule>
-
- <view wx:if="{{holiday}}" class="empty-container">
-   <view>
-     <image class="empty-picture" src="../../images/smile.svg"></image>
-     <view class="empty-text">假日注意休息</view>
-   </view>
- </view>
-<view wx:elif="{{loading}}" style="display:none;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
-<spinner></spinner>
-<view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
+<booking-bar app="{{app}}" bind:submit="onBookingBarSubmit"></booking-bar>
+<daily-schedule app="{{app}}" offset="{{offset}}" bind:submit="onDailyScheduleSubmit" style="background:#fff"></daily-schedule>
+<view wx:if="{{holiday}}" class="empty-container">
+  <view>
+    <image class="empty-picture" src="../../images/smile.svg"></image>
+    <view class="empty-text">假日注意休息</view>
+  </view>
 </view>
-
+<view wx:elif="{{loading}}" style="display:none;align-items: center;justify-content: center;flex-direction:column;height:33.333vh">
+  <spinner></spinner>
+  <view style="font-size:24rpx;color: rgba(0, 0, 0, 0.35);">正在加载...</view>
+</view>
 <view style="padding:20rpx">
-<booking-item wx:for="{{lessons}}" wx:key="*this" item="{{item}}" app="{{app}}" bind:submit="onBookingItemSubmit"></booking-item>
+  <view class="item-wrapper {{(item.mode&1)?'disabled':''}}" wx:for="{{lessons}}" wx:key="*this">
+    <view class="item">
+      <image class="item-image" src="{{app.globalData.staticHost}}/images/{{item.thumbnail}}"></image>
+    </view>
+    <view class="right">
+      <view class="text-time">
+        {{item.time}}
+        <text>{{item.teacher_name}}</text>
+      </view>
+      <view class="text-lesson">{{item.lesson_name}}</view>
+      <view class="sub-left">
+        <text>{{item.teacherName}}</text>
+        <text wx:if="{{!(item.mode&7)}}">已预约 {{item.count}}/{{item.peoples}}</text>
+      </view>
+      <view class="sub-right {{(item.mode==8)?'sub-right-btn':''}}" bindtap="onClick">
+        {{item.label}}
+      </view>
+    </view>
+  </view>
 </view>
 <login wx:if="{{showLogin}}" app="{{app}}" bind:success="onLoginSubmit"></login>
