--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,3 +1,29 @@
 page {
     background-color: #f2f2f2;
 }
+
+.wrapper {
+    width: 100vw;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.item-wrapper {
+    /* line-height: 40rpx; */
+    display: flex;
+    justify-content: center;
+    gap: 6rpx;
+    flex-direction: column;
+    width: 100%;
+}
+
+ 
+
+.swiper {
+    color: #999;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+}
